--- a/src/contact.html
+++ b/src/contact.html
@@ -32,7 +32,7 @@
     <!--nav-->
     <nav>
         <div class="container">
-            <a href="/src/index" title="Home" ><i class="fa-solid fa-house"></i></a>
+            <a href="/promovisiom/src/index" title="Home" ><i class="fa-solid fa-house"></i></a>
             <div class="dropdown">
                 <a href="" title="Abbigliamento"><i class="fa-solid fa-shirt"></i></a>
                 <div class="dropdown-content">
@@ -44,8 +44,8 @@
             </div>
             <a href="https://www.promovision-x.it/cataloghi/md%20IT%20-%2013_22.1%20GIFTS_ITA_EUR_vr.pdf"  title="Gadget"><i class="fa-solid fa-ribbon"></i></a>
             <a href="https://www.promovision-x.it/cataloghi/Main_2022__IT.pdf" title="Design"><i class="fa-solid fa-pen-ruler"></i></a>
-            <a href="/src/contact" title="Contatti"><i class="fa-solid fa-comment"></i></a>
-            <a href="/src/about" class="online" title="Chi Siamo"><i class="fa-solid fa-question"></i></a>
+            <a href="/promovisiom/src/contact" title="Contatti"><i class="fa-solid fa-comment"></i></a>
+            <a href="/promovisiom/src/about" class="online" title="Chi Siamo"><i class="fa-solid fa-question"></i></a>
         </div>
     </nav>
     <div class="black"></div>
